<resources>
    <string name="app_name">AgriApp-t</string>

    <!--
        Page: MainActivity
        View: Bottom bar
    -->
    <string name="your_land">Your Land</string>
    <string name="home">Home</string>
    <string name="input_crop">Input Crop</string>
    <string name="select_nitrogen_percentage">Select Nitrogen Percentage</string>
    <string name="nitrogen_amount">Nitrogen amount</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="High">Optimum</string>
    <string name="urea">Urea</string>
    <string name="tsp">TSP</string>
    <string name="mop">MoP</string>
    <string name="gypsum">Gypsum</string>
    <string name="required_dose">Required dose :</string>
    <string name="cost">Cost :</string>
</resources>
