<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.nutrient_input.NutrientInputActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:text="@string/select_nitrogen_percentage"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            >

            <RadioButton android:id="@+id/radio_low_nitrogen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:onClick="onRadioButtonClickedNitrogen"/>

            <RadioButton android:id="@+id/radio_medium_nitrogen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:onClick="onRadioButtonClickedNitrogen"/>


            <RadioButton android:id="@+id/radio_high_nitrogen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/High"
                android:onClick="onRadioButtonClickedNitrogen"/>


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:text="Select Phosphorus (ug/u)"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            >

            <RadioButton android:id="@+id/radio_low_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:onClick="onRadioButtonClickedP"/>

            <RadioButton android:id="@+id/radio_medium_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:onClick="onRadioButtonClickedP"/>


            <RadioButton android:id="@+id/radio_high_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/High"
                android:onClick="onRadioButtonClickedP"/>


        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:text="Select Potasium"
            android:textSize="24sp"
            />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            >

            <RadioButton android:id="@+id/radio_low_k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:onClick="onRadioButtonClickedK"/>

            <RadioButton android:id="@+id/radio_medium_k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:onClick="onRadioButtonClickedK"/>


            <RadioButton android:id="@+id/radio_high_k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/High"
                android:onClick="onRadioButtonClickedK"/>


        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:text="Select Sulpher"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            >

            <RadioButton android:id="@+id/radio_low_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:onClick="onRadioButtonClickedS"/>

            <RadioButton android:id="@+id/radio_medium_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:onClick="onRadioButtonClickedS"/>


            <RadioButton android:id="@+id/radio_high_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/High"
                android:onClick="onRadioButtonClickedS"/>


        </RadioGroup>


            <Button
                android:id="@+id/inputDone"
                android:layout_width="129dp"
                android:layout_height="85dp"
                android:onClick="onDone"
                android:text="Next"
                />


        </LinearLayout>

    </ScrollView>




</LinearLayout>