<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nutrient_input.NutrientResultActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/urea"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/default_padding_top"
                    android:paddingTop="@dimen/default_padding_top"
                    android:paddingBottom="@dimen/default_padding_bottom"
                    android:text="@string/urea"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_top"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingRight="@dimen/default_padding_top"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="@string/required_dose"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/required_dose_urea"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_bottom"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="TextView"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_top"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingRight="@dimen/default_padding_top"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="@string/cost"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/cost_urea"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_bottom"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="TextView"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tsp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/default_padding_top"
                    android:paddingTop="@dimen/default_padding_top"
                    android:paddingBottom="@dimen/default_padding_bottom"
                    android:text="@string/tsp"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_top"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingRight="@dimen/default_padding_top"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="@string/required_dose"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/required_dose_tsp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_bottom"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="TextView"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_top"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingRight="@dimen/default_padding_top"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="@string/cost"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/cost_tsp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_bottom"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="TextView"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mop"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/default_padding_top"
                    android:paddingTop="@dimen/default_padding_top"
                    android:paddingBottom="@dimen/default_padding_bottom"
                    android:text="@string/mop"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_top"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingRight="@dimen/default_padding_top"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="@string/required_dose"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/required_dose_mop"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_bottom"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="TextView"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_top"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingRight="@dimen/default_padding_top"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="@string/cost"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/cost_mop"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_bottom"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="TextView"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gypsum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/default_padding_top"
                    android:paddingTop="@dimen/default_padding_top"
                    android:paddingBottom="@dimen/default_padding_bottom"
                    android:text="@string/gypsum"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_top"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingRight="@dimen/default_padding_top"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="@string/required_dose"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/required_dose_gypsum"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_bottom"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="TextView"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_top"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingRight="@dimen/default_padding_top"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="@string/cost"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/cost_gypsum"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/default_padding_bottom"
                        android:paddingTop="@dimen/bottom_ellipsis_height"
                        android:paddingBottom="@dimen/bottom_ellipsis_height"
                        android:text="TextView"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onShow"
            android:layout_marginTop="@android:dimen/notification_large_icon_height"
            android:text="Show Nearest Fertilizer shop" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDirection"
            android:layout_marginTop="@android:dimen/notification_large_icon_height"
            android:text="Show Nearest Fertilizer shop" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>